commit tree 1a9a27a412598b0825193f8cee8fab85fd3b4bb7

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
+  <p><%= last_updated @post %></p>
   <%= f.text_field :title %><br>
 
   <label>Post Description</label><br>
