--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
-<h1><%= @post.title %></h1>
+<h1> My Post </h1>
+<p><%= last_updated @post %></p>
+<h1><%= title @post.title %></h1>
 <p><%= @post.description %></p>
